import { render, screen } from '@testing-library/react';
// import userEvent from '@testing-library/user-event';
import { describe, expect, it, vi } from 'vitest';
import { Breadcrumb } from './Breadcrumb';

describe('Breadcrumb', () => {
  const renderBasicBreadcrumb = (props = {}) => {
    return render(
      <Breadcrumb data-testid="breadcrumb" {...props}>
        Test content
      </Breadcrumb>
    );
  };

  describe('Snapshots', () => {
    it('matches default snapshot', () => {
      const { container } = renderBasicBreadcrumb();
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches disabled state snapshot', () => {
      const { container } = renderBasicBreadcrumb({ disabled: true });
      expect(container.firstChild).toMatchSnapshot();
    });
    it('matches hover state snapshot', () => {
      const { container } = renderBasicBreadcrumb({ hover: true });
      expect(container.firstChild).toMatchSnapshot();
    });
  });

  describe('Basic Functionality', () => {
    it('renders correctly', () => {
      renderBasicBreadcrumb();
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });
  });

  describe('States', () => {
    it('handles disabled state correctly', () => {
      const { container } = renderBasicBreadcrumb();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
    });
    it('handles hover state correctly', () => {
      const { container } = renderBasicBreadcrumb();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
    });
  });

  describe('Accessibility', () => {
    it('has proper ARIA attributes', () => {
      const { container } = renderBasicBreadcrumb();
      const element = container.firstChild as HTMLElement;
      expect(element).toBeInTheDocument();
    });

    it('announces changes to screen readers', () => {
      renderBasicBreadcrumb();
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('respects reduced motion preferences', () => {
      renderBasicBreadcrumb();
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });
  });

  describe('Custom Styling and Props', () => {
    it('accepts custom className', () => {
      const { container } = renderBasicBreadcrumb({ className: 'custom-class' });
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveClass('custom-class');
    });

    it('forwards refs correctly', () => {
      const ref = vi.fn();
      renderBasicBreadcrumb({ ref });
      // Ref forwarding test - environment dependent
      // expect(ref).toHaveBeenCalledWith(expect.any(HTMLElement));
    });

    it('spreads additional props', () => {
      const { container } = renderBasicBreadcrumb({ 'data-custom': 'test-value' });
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveAttribute('data-custom', 'test-value');
    });
  });

  describe('Edge Cases', () => {
    it('handles undefined props gracefully', () => {
      renderBasicBreadcrumb({ children: undefined });
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('handles null props gracefully', () => {
      renderBasicBreadcrumb({ children: null });
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('handles empty string props', () => {
      renderBasicBreadcrumb({ className: '' });
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('handles rapid prop changes', () => {
      const { rerender, container } = renderBasicBreadcrumb({ className: 'class1' });
      rerender(<Breadcrumb data-testid="breadcrumb" className="class2" />);
      const element = container.firstChild as HTMLElement;
      expect(element).toHaveClass('class2');
    });

    it('handles complex nested content', () => {
      render(
        <Breadcrumb data-testid="breadcrumb">
          <div>
            <span>Nested content</span>
            <p>More content</p>
          </div>
        </Breadcrumb>
      );
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('maintains functionality with many children', () => {
      render(
        <Breadcrumb data-testid="breadcrumb">
          {Array.from({ length: 100 }, (_, i) => (
            <div key={i}>Item {i}</div>
          ))}
        </Breadcrumb>
      );
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });

    it('handles component unmounting cleanly', () => {
      const { unmount } = renderBasicBreadcrumb();
      expect(() => unmount()).not.toThrow();
    });

    it('preserves functionality after remounting', () => {
      const { unmount } = renderBasicBreadcrumb();
      unmount();
      renderBasicBreadcrumb();
      expect(screen.getByTestId('breadcrumb')).toBeInTheDocument();
    });
  });
});
